changing the design of related lists (opportunities and cases) on contact.show and replacing the popups with inline cards
Former-commit-id: 00cbc3421fe13d119525850e1f71cfa8c6bcc2bb [formerly 82cf87d3aee38aeee75cabd0ac670d8657e63222] [formerly 2cce7c0d43d4235e59a1e4907167c86ce6259710 [formerly e306d1236041835c1209c49d5afbc852be6c8491]]
Former-commit-id: f6d7bc7890e1db0478b010540fa04df098e7c6c9 [formerly 473e2be15ab7ee3c1e6ceb032ef7bb482540e749]
Former-commit-id: 1a19580df533283a0a348aa0927d0c09f91e56db

--- a/templates/opportunities/opportunity_new.html
+++ b/templates/opportunities/opportunity_new.html
@@ -80,7 +80,7 @@
                         <div class="row">
                           <div class="col-md-12">
                             <div class="form-group">
-                              <div class="col-md-7 ">
+                              <div class="col-md-7 sm-margin-bottom-15 ">
                                   <input type="text" required id="id_name" class="form-control" placeholder="{{_('Opportunity amount...')}}" ng-model="opportunity.amount_per_unit ">
                                </div>
                               <div class="col-md-5 ">
