Add Help text explaining how to found the key and the server name from highrise fix #864
Former-commit-id: 6356492f3ddccd2b61ad1bc2fda5d0ab0db8b764 [formerly a0adf6215ba6f4cc46b01ffacbe56fa6c442979a] [formerly 72742ac51afa45762159f6eaf160b8d844223204 [formerly 37fd178195c2ea12c3647d5b4d07159e141a0a81]]
Former-commit-id: 73d7c40cf73906ee2940d1a8a557275bb5fd86fe [formerly aa7b3a577fb2d34c535e02f031ae0b03fea476c6]
Former-commit-id: 497c7dbe12b38e824c0bca56b85796e0c972b260

--- a/templates/admin/imports/import_new.html
+++ b/templates/admin/imports/import_new.html
@@ -80,6 +80,13 @@
                                         </div>
                                        
                                     </form>
+                                    <span> How to get a Key? : in highrise welcome page go to "Account & Settings" and choose "My info" and click on "API token".
+                                    </span>
+                                    <br/>
+                                    <span>
+                                        How to get a Server name? : in highrise welcoe page you have url with this form "https://iogrow3.highrisehq.com/" in this case your server name is "iogrow3"
+                                    </span>
+                                    
                                 </div>
                             </div>
                         
