calendar language , still not done yet !
Former-commit-id: e4be4bbb1a0f174585301e3240f6fefea9d1e2f9 [formerly 2342f553164336e1b72f3e75f5366a719a2e8155] [formerly dde5d00fd04343824023df961605c06a42ac4fc6 [formerly 10ba1fd09ef4a7e9e12201b6e52921753fc0e483]]
Former-commit-id: 7d7add77dbff0d547d263f88b27fb5dbd666f899 [formerly c154755ceef5f8e20cb41389cfe62f4412c3844b]
Former-commit-id: 810945ccb857a3569b1dd772aa174c0b8c15d214

--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -635,7 +635,7 @@
 
                   </div>
                   <div class="col-md-4">
-                    <input type="submit"  ng-click="addNewtag(tag)" class="btn green pull-right" value="Add">
+                    <input type="submit"  ng-click="addNewtag(tag)" class="btn green pull-right" value="{{_('Add')}}">
                     <!--input type="submit" ng-show="isLoading" class="btn green pull-right" value="{{ _('Loading...') }}"-->
                   </div>
                   </div>
@@ -803,7 +803,7 @@
 
                       </div>
                       <div class="col-md-4">
-                        <input type="submit"  ng-click="addNewtag(tag)" class="btn green pull-right" value="Add">
+                        <input type="submit"  ng-click="addNewtag(tag)" class="btn green pull-right" value="{{_('Add')}}">
                         <!--input type="submit" ng-show="isLoading" class="btn green pull-right" value="{{ _('Loading...') }}"-->
                       </div>
                       </div>
