--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -240,7 +240,7 @@
                   </ul>
                 </div>
                 <div class="col-md-4">
-                  <input type="submit"  ng-click="addNewtag(tag)" class="btn green pull-right" value="Add">
+                  <input type="submit"  ng-click="addNewtag(tag)" class="btn green pull-right" value="{{_('Add')}}">
                 </div>
               </div>
             </form>
@@ -308,7 +308,7 @@
                   </ul>
                 </div>
                 <div class="col-md-4">
-                  <input type="submit"  ng-click="addNewtag(tag)" class="btn green pull-right" value="Add">
+                  <input type="submit"  ng-click="addNewtag(tag)" class="btn green pull-right" value="{{_('Add')}}">
                 </div>
               </div>
             </form>
