--- a/templates/leads/lead_new.html
+++ b/templates/leads/lead_new.html
@@ -423,7 +423,7 @@
       </div>
       <div class="modal-footer">
           <button class="btn" data-dismiss="modal" aria-hidden="true">{{_('Cancel')}}</button>
-          <input  type="submit" ng-click="pushElement(address,addresses,'addresses')" class="btn green" value="Add this address">
+          <input  type="submit" ng-click="pushElement(address,addresses,'addresses')" class="btn green" value="{{_('Add this address')}}">
       </div>
     </div>
   </div>
