--- a/templates/calendar/calendar_show.html
+++ b/templates/calendar/calendar_show.html
@@ -1,3 +1,4 @@
+
 <div class="row subHeader">
     <div class="currentApp">
        <div class="btn-group">
@@ -29,6 +30,8 @@
      </h2>
   </div>
 </div>
+<input  type="hidden" value='{{ME}}' id="user_id"/>
+
 <div  class="page-content">
   <div class="loader-container row" ng-show="isLoading">
     <div class="loader-dialog col-md-4 col-md-offset-4 ">
