--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -235,7 +235,7 @@
                 </ul>
               </div>
               <div class="col-md-4">
-                <input type="submit"  ng-click="addNewtag(tag)" class="btn green pull-right" value="Add">
+                <input type="submit"  ng-click="addNewtag(tag)" class="btn green pull-right" value="{{_('Add')}}">
               </div>
             </div>
           </form>
@@ -302,7 +302,7 @@
               </ul>
             </div>
             <div class="col-md-4">
-              <input type="submit"  ng-click="addNewtag(tag)" class="btn green pull-right" value="Add">
+              <input type="submit"  ng-click="addNewtag(tag)" class="btn green pull-right" value="{{_('Add')}}">
             </div>
           </div>
         </form>
