insert the intro video on the landing page
Former-commit-id: 83e34b794f8113017b32f138ba879cbdf6ab3ca3 [formerly 9c30b955aad0837d38de2e042555dbbae7cea04d] [formerly 58530e090af7c6a471ee8ecec449b346a7839001 [formerly d7573723bf31a863fba0651160aa4e9fa0cbf034]]
Former-commit-id: 0f01530bd772030e9cf905dbdad6a4b55bd90fa1 [formerly 3c484693fc100240f1e9ae71e5e4cbf821ed3d1a]
Former-commit-id: ab1a4c47e0ddf1edd922b7d7666a47fa362c4f45

--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -368,7 +368,9 @@
                             </div>
                           </div>
                         <h1>Focus on your Customers and all else will follow</h1>
-                        <br>
+<br>
+                        
+
                     </div>
 
 
@@ -377,9 +379,8 @@
                     </div>
 
                     <div class="col-lg-8">
-                        <img class="img-responsive" src="/static/welcome/img/app-bg1.png" alt="">
-                        <!--<h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4>
-                        <a href="#features" type="submit" class="btn btn-lg btn-theme smoothScroll">LEARN MORE</a>-->
+  <iframe width="853" height="480" src="//www.youtube.com/embed/BJrrSMbENSU" frameborder="0" allowfullscreen=""></iframe>
+                       
                     </div>
                     <div class="col-lg-2 hidden-xs hidden-sm hidden-md">
 
