Scrapy from linkedin is done fix #755
Former-commit-id: dd7f425af643fc97ca2f57352d7a19c4da206ed3 [formerly 25701b85d76f69ca14c5881aac0695bd75df35dd] [formerly 02e4188a23370cd97ff10fd56fa10707ac25f798 [formerly 10372ed2e645cceae0718c1a8ca674c1734bb967]]
Former-commit-id: 086d8169c7190c8e001c7273a0161a2473278b39 [formerly f289be826c49d840de85d927c0eb71d77421573f]
Former-commit-id: 8e05faa68efa6f2b71fbdf0f3db93c78b5e8b66e

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -1551,7 +1551,7 @@
                     <hr/>
                     <div class=''>
                         <p>{{ _("Collaborators:")}}</p>
-                        <div ng-repeat="collaborator in account.collaborators_list" class="invitation">
+                        <div ng-repeat="collaborator in collaborators_list" class="invitation">
                             <img class="google-avatar" ng-src="<%=collaborator.photo%>"/>
                             <%=collaborator.display_name%> < <%=collaborator.email%> >
                         </div>
