--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -1552,7 +1552,7 @@
                     <div class=''>
                         <p>{{ _("Collaborators:")}}</p>
                         <div ng-repeat="collaborator in collaborators_list" class="invitation">
-                            <img class="google-avatar" ng-src="<%=collaborator.photo%>"/>
+                            <img class="google-avatar" ng-src="<%=collaborator.img%>"/>
                             <%=collaborator.display_name%> < <%=collaborator.email%> >
                         </div>
 
