--- a/templates/base.html
+++ b/templates/base.html
@@ -584,11 +584,12 @@
   <script type="text/javascript" src="/static/app/scripts/vendor/jquery.ui.map.services.js">
   </script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/1.1.0/annyang.min.js"></script>
-   <script src="/static/plugins/fullcalendar/fullcalendar/lang/all.js"></script>
-  <script src="/static/plugins/fullcalendar/fullcalendar/gcal.js"></script>
+  <script src="/static/plugins/fullcalendar/fullcalendar.min.js" type="text/javascript"></script>
+   <script src="/static/plugins/fullcalendar/lang-all.js" type="text/javascript"></script>
+  <script src="/static/plugins/fullcalendar/gcal.js" type="text/javascript"></script>
 
-  <script src="/static/plugins/fullcalendar/fullcalendar.min.js"></script>
-   <script src="static/app/scripts/vendor/calendar.js"></script>
+  
+
 
  <script src="/static/plugins/date-time-picker/jquery.simple-dtpicker.js"></script>
 
