Fix bug on event show page
Former-commit-id: b09649e6ddaa867dc7b46ebe92d0b0de3a460c42 [formerly 4a73cacb03ad97d7dd2df2de9f4eacd3c82d8587] [formerly b79ee3f993480f197d67049dcc355a4ec1c90400 [formerly c86ebd386a59063998b91e5f9998e3ef6a0b567d]]
Former-commit-id: 7c14065a942c0516f7fcafe310194489c68ee85d [formerly 9874f95ac4e72c09338e7fe005ea6fce7fd45252]
Former-commit-id: 8e09ec8a052cf95ce2887214f9ec9fc8ce060729

--- a/templates/activities/event_show.html
+++ b/templates/activities/event_show.html
@@ -206,7 +206,7 @@
           <div class="portlet showCard">
             <div class="portlet-title line">
               <div class="caption">
-                <i class="icon-user"></i>{{ _('Who's involved')}}
+                <i class="icon-user"></i>{{ _('Who is involved')}}
               </div>
             </div>
             <div class="portlet-body">
