When we share a record we must diplay the list of collaborator whom have access is done  fix #711
Former-commit-id: 7582f377626b6669d407940eb60d67df089d7d75 [formerly 18c2edbdbc2717ab6ef38a9b1c835963149a1a13] [formerly 8248154ff9b15a0d476a79d4409c0cdda1a28225 [formerly 3716dad621f882e96dbe25fb843a22171fd474fe]]
Former-commit-id: 057d01cf8eba55e65232875986fdd6aa1789d5ac [formerly 9387b1521f66bb65fe8f4d6aa54ef8badeae38d2]
Former-commit-id: 981e670a7310052a73cdd02552e3d5d7ab90d0ef

--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -1565,8 +1565,8 @@
                     <hr/>
                     <div class=''>
                     <p>{{ _("Collaborators:") }}</p>
-                        <div ng-repeat="collaborator in contact.collaborators_list" class="invitation">
-                          <img class="google-avatar" ng-src="<%=collaborator.photo%>"/>
+                        <div ng-repeat="collaborator in collaborators_list" class="invitation">
+                          <img class="google-avatar" ng-src="<%=collaborator.img%>"/>
                            <%=collaborator.display_name%> < <%=collaborator.email%> >
                         </div>
 
