--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -52,6 +52,7 @@
     </div>
     </div>
 </div>
+
 <div  class="page-content">
 <div class="loader-container row" ng-show="isLoading">
       <div class="loader-dialog col-md-4 col-md-offset-4 ">
@@ -168,6 +169,16 @@
       </div>
   </div>
 </div>
+<form action="/stripe" method="POST">
+  <script
+    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+    data-key="pk_test_4XbE0bXkjiNgXEPJM61SnY46"
+    data-amount="2000"
+    data-name="Demo Site"
+    data-description="2 widgets ($20.00)"
+    data-image="/128x128.png">
+  </script>
+</form>
 <div class="row">
   <div class="col-md-12">
     <div class="row">
