Change the thumbnail of the welcome page
Former-commit-id: 10a127c774a1159377203c37311e96cade08b3c2 [formerly 4d432ac6bc461dd4a9b741865bbf2d8f6d0f429c] [formerly c1fb3dd9b18200a4f94b772bdf9d91f16894185c [formerly c0b8897631008c4b7c880a43a6920fdd5564a768]]
Former-commit-id: ec798c1a8414facc0f428a9a54ebceb4a7cabaea [formerly a7b038b1e5c69c7da6c33d7eecf46dea559fe26a]
Former-commit-id: d453e0d89c66996d3fc4e990d50552abd7c73831

--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -379,7 +379,7 @@
                     </div>
 
                     <div class="col-lg-8">
-  <iframe width="853" height="480" src="//www.youtube.com/embed/BJrrSMbENSU" frameborder="0" allowfullscreen=""></iframe>
+  <iframe width="753" height="400" src="//www.youtube.com/embed/vom8MUTyFuk" frameborder="0" allowfullscreen=""></iframe>
                        
                     </div>
                     <div class="col-lg-2 hidden-xs hidden-sm hidden-md">
