--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -346,7 +346,7 @@
                                                         </div>
                                                     </li>
                                                     <li ng-repeat="website in infonodes.websites"><a editable-text="website.url" onbeforesave="inlinePatch('Infonode','websites', 'url',website.entityKey,$data)" href="http://<%=website.url%>"  target="_blank" editoptions editdataattr="deleteInfonode('<%=website.entityKey%>','websites')" ><%=website.url%></a>
-                                                        <a href="<%=website.url%>" class="icon-link" >
+                                                        <a href="<%=website.url%>" target="new" class="icon-link" >
                                                         </a>
                                                      </li>
                                                     <li>
@@ -370,7 +370,7 @@
                                                         </div>
                                                     </li>
                                                     <li ng-repeat="sociallink in infonodes.sociallinks"><a editable-text="sociallink.url" onbeforesave="inlinePatch('Infonode','sociallinks', 'url',sociallink.entityKey,$data)"  editoptions editdataattr="deleteInfonode('<%=sociallink.entityKey%>','sociallinks')" href="<%=sociallink.url%>" target="_blank"> <%=sociallink.url%> </a>
-                                                    <a href="<%=sociallink.url%>" class="icon-link" >
+                                                    <a href="<%=sociallink.url%>" target="new" class="icon-link" >
                                                     </a>
                                                     </li>
 
