changing welcome page background image
Former-commit-id: 1ac86003edb405873b8817382ed799da571be7e0 [formerly 5121bec06d272551353831f360bc42f0b923758b] [formerly 547394eae1e4ca2450c4e31c3009e006cb817c7f [formerly 660e172ab36608b3a1ed8a4bbede4d4cffbd7dd1]]
Former-commit-id: c97555ec7c567952d85ab385fb2d912fedd23d14 [formerly dfb126d40cfed5d42ea8e471d871a99b135f0642]
Former-commit-id: a1acc3749b7bdea4a5a5ee6fc0ec3bbcb4df289f

--- a/static/welcome/css/style.css
+++ b/static/welcome/css/style.css
@@ -355,7 +355,7 @@ a:after {
 /* Header Wrap */
 
 #headerwrap {
-	background: url("../img/backgrndo.jpg") no-repeat center top;
+	background: url("../img/background.jpg") no-repeat center top;
 	background-size: cover;
 	padding-top: 80px;
 }
