get people from twitter fix #904, create api for get people from twitter fix #914
Former-commit-id: 74ca73553bf87051e4045dc743ce4b353699e469 [formerly fb1155019e3faf4c8891869c23b67d14faa1f8e9] [formerly b09a1d019fa7aa0cc191dd0ef764e2fa6ca561f5 [formerly ba5d4d431c00a937b46fa39778900d4c9537bce2]]
Former-commit-id: d833aeba8ac8b71b527d31ee75eb95e466ffa5c7 [formerly b15ba5ca7f3aeabdffc2e75dbcc2df16e84641d4]
Former-commit-id: c83c84e9cb821e6b96d69a90312c908cf31b7cbc

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -154,7 +154,7 @@
                                         <a ng-click="waterfallTrigger(); selectedTab = 7;">{{_('Attach Documents')}}</a>
                                     </li>
                                     <li  class="ng-tab sm-menu"  ng-class="{active: selectedTab == 9}">
-                                        <a ng-hide="checkIfEmpty(linkedProfile)" ng-click="waterfallTrigger(); selectedTab = 9;"  >LinkedIn</a>
+                                        <a ng-hide="checkIfEmpty(linkedProfile,twitterProfile)" ng-click="waterfallTrigger(); selectedTab = 9;"  >Details of Lead</a>
                                     </li>  
                                     <!-- <li class="ng-tab md-menu" ng-class="{active: selectedTab == 4}">
                                       <a ng-click="selectedTab = 4;">Needs</a>
@@ -768,6 +768,99 @@
                                                     </li>
                                                 </ul>
                                             </div>
+                                            <div class="news-blocks blank-card blank-card-yellow newsCard">
+                                                <h3>General Informations from Twitter</h3>
+                                                <img class="google-avatar pull-right" src="<%=twitterProfile.profile_image_url_https%>"/>
+                                                <div class="news-block-tags">
+                                                    <strong>Description of user</strong>
+                                                </div>
+                                                <ul class="list-unstyled contact-infos">
+                                                
+                                                    <li>
+                                                        <%=twitterProfile.description_of_user%>
+                                                    </li>
+                                    
+
+                                                </ul>
+                                               
+                                                <div class="news-block-tags">
+                                                    <strong>Screen name</strong>
+                                                </div>
+                                                <ul class="list-unstyled contact-infos">
+                                                    <li>
+                                                        <%=twitterProfile.screen_name%>
+                                                    </li>
+                                                </ul> 
+                                                <div class="news-block-tags">
+                                                    <strong>Location</strong>
+                                                </div>
+                                                <ul class="list-unstyled contact-infos">
+                                                    <li>
+                                                        <%=twitterProfile.location%>
+                                                    </li>
+                                                </ul>
+                                                <div class="news-block-tags">
+                                                    <strong>Language</strong>
+                                                </div>
+                                                <ul class="list-unstyled contact-infos">
+                                                    <li>
+                                                        <%=twitterProfile.lang%>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="news-blocks blank-card blank-card-red newsCard">
+                                                <h3>Stats from Twitter</h3>
+                                                <div class="news-block-tags">
+                                                    <strong>Number of Tweets</strong>
+                                                </div>
+                                                <ul class="list-unstyled contact-infos">
+                                                    <li>
+                                                        <%=twitterProfile.nbr_tweets%>
+                                                    </li>
+                                                </ul>
+                                                <div class="news-block-tags">
+                                                    <strong>Number of followers</strong>
+                                                </div>
+                                                <ul class="list-unstyled contact-infos">
+                                                <li>
+                                                        <%=twitterProfile.followers_count%>
+                                                </li>
+                                                </ul>
+                                                <div class="news-block-tags">
+                                                    <strong>Number of friends</strong>
+                                                </div>
+                                                <ul class="list-unstyled contact-infos">
+                                                    <li>
+                                                        <%=twitterProfile.friends_count%>
+                                                    </li>
+                                                </ul> 
+                                            </div>
+                                             <div class="news-blocks blank-card blank-card-red newsCard">
+                                                <h3> Tweets</h3>
+                                                <div class="news-block-tags">
+                                                    <strong>Last Tweet:</strong>
+                                                </div>
+                                                <ul class="list-unstyled contact-infos">
+                                                    <li>
+                                                        Text:
+                                                        <br/>
+                                                        <%=twitterProfile.last_tweet_text%>
+                                                    </li>
+                                                </ul>
+                                                <ul  class="list-unstyled contact-infos" >
+                                                    Number of retweets:
+                                                    <br/>
+                                                        <%=twitterProfile.last_tweet_retweet_count%>
+                                                    <br/>
+                                                    Number of favorites:
+                                                    <br/>
+                                                <%=twitterProfile.last_tweet_favorite_count%>
+                                                    
+                                                </ul>
+                                                
+                                                
+                                            </div>
+
                                         </div>
                                         <div class="col-md-6">
                                             <div class="right-col">
@@ -799,6 +892,7 @@
                                                     </li>
                                                     </ul>
                                                 </div>
+
                                             </div>
                                         </div>
                                     </div>
