fix the height on labels div on lead, fix the scrolling pbm on lead, fix #911
Former-commit-id: 6415f8d9823f359f76699f1f8f3ea0f92fcc8560 [formerly 40be5c0f3c36a8cb84527dc6fb61edc2d806c0fb] [formerly 36dea9157a33388e190bb61d00a51dd847701b20 [formerly 41f8d826e454f692cdc6a65426d718a8a51003a4]]
Former-commit-id: 223b2aff83caf4cede9322b032d888eb62dd8b0b [formerly 87dc287f59b574ce7498fee35428a48f09ed27fc]
Former-commit-id: 23804c0704816d3719cfc2f8c1dab7f07b50f24d

--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -284,10 +284,11 @@
       <div class="portlet-title">
         <div class="caption">
                 <!-- class="fa fa-reorder"--><i></i>{{_("Labels")}}
-        </div>
+        </div>  
       </div>
       <div class="portlet-body">
-        <ul class="list-group tags-list">
+
+        <ul id="slimList" class="list-group tags-list ">
           <li ng-repeat="tag_item in tags" class="list-group-item tags-list-item"  >
             <div class="row">
               <span editable-text="tag_item.name"  ng-drag="dragTag(tag_item)" id="iii"  draggable class="with-color" ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;" 
@@ -419,4 +420,5 @@
         autoresize: true
       });
 $('.textfill').textfill({debug: true, maxFontPixels: 16});
+$('#slimList').slimScroll({});
 </script>
