--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -203,6 +203,7 @@
                         <li><a href="#features" align="center" class="smoothScroll">Features</a></li>
                         <li><a href="#pricing" align="center" class="smoothScroll">Pricing</a></li>
                         <li><a href="#contact" align="center" class="smoothScroll">Contact</a></li>
+                        <li><a href="/blog" align="center" class="smoothScroll">Blog</a></li>
                         <li><div class="addthis_sharing_toolbox" style="margin-top: 6px;"></div></li>
                     </ul>
 
