fix the length of labels div, the labels div is scrolling on opportunity list, contact list
Former-commit-id: a609a03642719d6a8f63a06625db8e1d955ff4af [formerly 5497f5eee720fa720b66b9b3ca30fd5a5f267f39] [formerly 7a72de5c5a1dc50ba56666768109af4f6e8fc5c8 [formerly a98f5acb91a113d788eef861b51c892518c85ece]]
Former-commit-id: 06f5df0144c21c79eb479bbd628b11b2373e45c0 [formerly 992d7690c7d338f9c1d3de80fee685e619e6ad9d]
Former-commit-id: d02c722cfd9e2e7cf22e0ae73c3a15ff81ecb149

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -274,7 +274,7 @@
             </div>
           </div>
           <div class="portlet-body">
-            <ul class="list-group tags-list">
+            <ul class="list-group tags-list" id="slimList">
               <li ng-repeat="tag_item in tags" class="list-group-item tags-list-item" >
                 <div class="row">
                   <span editable-text="tag_item.name" draggable ng-drag="dragTag(tag_item)"  class="with-color" ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;"
@@ -496,4 +496,5 @@
         autoresize: true
   });
   $('.textfill').textfill({debug: true, maxFontPixels: 16});
+  $('#slimList').slimScroll({});
 </script>
