test on the stripe billing
Former-commit-id: d90a0466a39058fee18aebfae6fb98064d198adf [formerly d66a6756ce7676289c0135d695d2fe765964b010] [formerly 2dd6d29be29dbf0fcb55be083eb2fa89c86f584d [formerly b796e69182424923b0a63e583c95aaa27fea072e]]
Former-commit-id: a79e635b436ac09f422b542afd4d0507c3b155e2 [formerly 6105790bdde7b61a7d1ff0b7033f16881600c8d9]
Former-commit-id: 5caa988c57ed5bce7375b627cbfbf8edbf32b845

--- a/templates/base.html
+++ b/templates/base.html
@@ -54,6 +54,17 @@
 
   <!-- END THEME STYLES -->
 
+  <!-- **********************the stripe code******************************* -->
+<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+<script type="text/javascript">
+  // This identifies your website in the createToken call below
+  Stripe.setPublishableKey('pk_test_4XcXjg4Qggo2HeVWnGaXwGDB');
+  console.log("stripe---------------------------------------------------------->")
+  // ...
+</script>
+ 
+   <!-- end the stripe code -->
+
 
   <script type="text/javascript">
   window.___gcfg = {
@@ -603,6 +614,7 @@
  ga('send', 'pageview');
 
 </script>
+
   <!-- END JAVASCRIPTS -->
 </body>
 
