fix the length of labels div, the labels div is scrolling on task list and case list
Former-commit-id: 7bda71ca25e65bda60e82a8086a1a2e0558744a8 [formerly 7f9fc6dc54d50bcad95b347c9fa6d4899e8928c2] [formerly 41a4a60b0f56cec12d1fa657d487880bc77c57a8 [formerly d42084ea36273d86b1e91e8cf6d36734a0537a9c]]
Former-commit-id: c186dc40f8fb2797bc9c373da8fbdbd9fd62ebaf [formerly 23b94eb4d053433b1c1ff5c4e684654f7aefbd7e]
Former-commit-id: 3fb41893c5e07dd40aa5b9a439987df8553c02c2

--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -1068,7 +1068,7 @@
                 </div>
                 <div class="portlet-body">
                     <div class="row">
-                    <ul class="list-group tags-list">
+                    <ul class="list-group tags-list" id="slimList">
                       <li  ng-repeat="tag_item in tags" class="list-group-item tags-list-item">
                         <span  editable-text="tag_item.name" draggable ng-drag="dragTag(tag_item)" style="background-color:<%=tag_item.color%>;color:idealTextColor(<%=tag_item.color%>);" class="with-color" ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)"
                          ng-model='tag_item.name'  onbeforesave="inlinePatch('tag','', 'title',tag_item,$data)">
@@ -1210,4 +1210,5 @@
                 disableFadeOut: true
             });
         });
+        $('#slimList').slimScroll({});
 </script>
