fix bug on case list page
Former-commit-id: 953d62b0db1d2595c4e3169e20eb5ae869104391 [formerly 1fc27f423df121a44e2d2c766b744b4d0a77fb1a] [formerly 538d104a6c36625032948c39990a39b58832d4b3 [formerly 1567c9e8d1a031cfbbfb10df9baecf89eba67aab]]
Former-commit-id: b71e66750c232c3e4022d04466b30354510e7396 [formerly 4619c6aeff3dac4d076170b2dedd23be792baaeb]
Former-commit-id: e93431dd143919ad62c3bc457564ac0184f5674f

--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -339,7 +339,7 @@
         </div>
       </div>
       <div class="portlet-body">
-        <ul class="list-group tags-list" id="slimList">
+        <ul class="list-group tags-list" >
           <li ng-repeat="tag_item in tags" class="list-group-item tags-list-item"  >
             <div class="row">
               <span editable-text="tag_item.name"  ng-drag="dragTag(tag_item)" id="iii"  draggable class="with-color" ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;"
