update google api client id
Former-commit-id: 68f63ede184c3a8385f5839edad5ec2f854cf291 [formerly 9cbfbb59dfce46fd1756c782cf46d38a234c8c14] [formerly afd42e0a5699bd576740dba1fd0bc5c67fe8cccf [formerly c19d5d048e41edb27902dce599b1f04471c0cd47]]
Former-commit-id: b3ac0e42acfa79a8fe1424f831a336316b0cb0ea [formerly 9a8ec32101416f6b0c52b610e06f7426668cece9]
Former-commit-id: 62e670a15fa116d22349d1159f5656db7a3d9045

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -119,11 +119,11 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <hr class="sm-hr">
-                                    <div class="tags-section hidden" ng-class="{hidden: contact.tags == null}">
+                                    <div class="tags-section hidden" ng-class="{hidden: lead.tags == null}">
                                         <div class="section-content">
                                             <span class="pull-left">{{_('Tags:')}} </span>
                                             <!-- ngRepeat: tag in account.tags -->
-                                            <a ng-repeat="tag in contact.tags" href="/#/search/type:Contact tags:<%=tag.id%>">
+                                            <a ng-repeat="tag in lead.tags" href="/#/search/type:Lead tags:<%=tag.id%>">
                                                 <span class="pull-left task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">
                                                     <%= tag.name %>
                                                 </span>
