Billing show and list page
Former-commit-id: 6814da2865d17fe758fce1a775b2ef1900a20a46 [formerly ad72a10894b2bdc3a35f111e0e0b879e03cb6dfc] [formerly d8b50dc1802bb18df6dbbfd86b4f7d2802103140 [formerly 945073c5fa0b25b413fb42deb3550fe1a9459d4b]]
Former-commit-id: 1cbfcec762c39efbb51436ad5e0ce157dce465c0 [formerly 4f648f07fb74843b9646f78356e8f75ec5ab5985]
Former-commit-id: 4ab7c82789e7e4c788a58dd717b752749a02ab1f

--- a/templates/billing/billing_list.html
+++ b/templates/billing/billing_list.html
@@ -54,7 +54,7 @@
   <div class="row" ng-show="isSignedIn">
     <div class="col-md-9">
        <a class="btn red newBtn" href="/#/admin/users/new" >
-                      New User    
+                      {{_('Purchase license')}}    
                     </a>
 
     </div>
@@ -82,8 +82,16 @@
                       <%= user.email %>
                     </span>
                     <br>
+                  <span>
+                      Status: <%= user.status %>
+                    </span>
+                    <br>
                     <span>
-                      status: <%= user.status %>
+                      Licenses: <%= user.nmbrOfLicenses %>
+                    </span>
+                  <br>
+                  <span>
+                      License Status: <%= user.LicenseStatus %>
                     </span>
 
 
@@ -111,6 +119,15 @@
                     <span>
                       {{ _('invited by')}}<%= invitee.invited_by %> at <%= invitee.updated_at %>
                     </span>
+                    <br>
+                    <span>
+                      Licenses: <%= invitee.nmbrOfLicenses %>
+                    </span>
+                  <br>
+                  <span>
+                      License Status: <%= invitee.LicenseStatus %>
+                    </span>
+
 
 
                   </div>
