--- a/templates/billing/billing_show.html
+++ b/templates/billing/billing_show.html
@@ -38,16 +38,112 @@
 </div>
 
 <div  class="page-content">
-  <div class="loader-container row" ng-show="isLoading">
-    <div class="loader-dialog col-md-4 col-md-offset-4 ">
-      <div class="loader-content">
-        {{ _('Loading...')}}
-      </div>
+    <div class="loader-container row" ng-show="isLoading">
+        <div class="loader-dialog col-md-4 col-md-offset-4 ">
+            <div class="loader-content">
+                Loading...
+            </div>
+        </div>
     </div>
-  </div>
-<div ng-show="isContentLoaded" class="row">
+    <div class="" ng-show="immediateFailed">
+        <div class="col-md-12">
+            <h1>Sign-in Button;</h1>
+            <span id="signin">
+                <span id="myGsignin"></span>
+            </span>
+        </div>
+    </div>
+    <div class="row" >
+        <div class="col-md-9">
+            <div class="row">
+                
+                <div class="showPage slimForm col-md-12">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="row">
+                                <div class="col-md-9">
+                                   
+                                        <div class="row">
+                                            <div class="col-md-9">
+                                            <div class="pic">
+                                            <a href="<%=user.google_public_profile_photo_url%>" class="">
+                                                <img alt="<%= user.google_display_name%>" src="<%=user.google_public_profile_photo_url%>" class="img-responsive profile-photo-large-billing-show" >
+                                                <span>
+                                                  <%=user.google_display_name%>
+                                                </span>
+                                             </a>
 
+                                                
+                                            </div>
+                                                <div class="form-group">
+                                                    <span></span>
+                                                    <br>
+                                                    <br>
+                                                    <div class="col-md-12">
+
+                                                      <ul class="list-unstyled contact-infos">
+                                                        <li ng-show="showEmailForm">
+                                                            <div class="row">
+                                                                <form class="form-inline newLeadForm" role="form">
+                                                                    <div class="form-group lg-group" style="">
+                                                                        <label class="sr-only" for="exampleInputEmail2">Email</label>
+                                                                        <input type="email" class="form-control" id="exampleInputEmail2" ng-model="email.email" placeholder="exp@gmail.com" required>
+                                                                    </div>
+                                                                    <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="pushElement(email, emails, 'emails')" >Add</button>
+                                                                    <button type="submit" ng-click="showEmailForm = false" class="btn btn-default">X</button>
+                                                                </form>
+                                                            </div>
+                                                        </li>
+                                                        <li ng-repeat="email in emails">
+                                                            <a editoptions editdataattr="deleteInfos(emails,$index)"  editable-text="email.email" >
+                                                                <%=email.email %>
+                                                            </a>
+                                                        </li>
+                                                        <li>
+                                                            <a class="btn-link addAnotherPhone" ng-hide="showEmailForm" ng-click="showEmailForm = true">
+                                                                <i class="icon-plus"></i> Add a new email address </a>
+                                                        </li>
+                                                    </ul>
+
+                                                  <br>
+                                                  <div class="form-group">
+                                                    <textarea id="some-textarea" placeholder="Hi i want to add you to this project ..." id="noteBody" class="form-control ng-pristine ng-valid " rows="7" ng-model="message"></textarea>
+                                                     </div>
+                                                        
+                                                  </div>
+                                                </div>
+                                            </div>
+
+                                 
+                                        </div>
+                                       
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                 <a class="btn red newBtn pull-right" ng-click="addNewUser(message)"  >
+                                              Invite    
+                                            </a>
+                            </div>
+                        
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+           
+        </div>
+        
+   
+    </div>
 </div>
 
 
-  </div>
+
+<script type="text/javascript">
+    $(function() {
+        $('#datetimepicker2').datetimepicker({
+            language: 'fr',
+            pickTime: false
+        });
+    });
+</script>
